# trunk

plugins/qPoses/: CMakeLists.txt  PosesDlg.ui  dispatcher.h  fileLoadModal.cpp  fileLoadModal.h  fileLoadModal.ui  posefile.cpp  posefile.h  qPosesDlg.cpp  qPosesDlg.h  qPosesPlugin.cpp  qPosesPlugin.h
